https://bugs.webkit.org/show_bug.cgi?id=34612 " MSAA: accSelect returns error codes for most elements that arent listbox or menupopup related" <rdar://problem/7436861>

Reviewed by Jon Honeycutt.

* AccessibleBase.cpp:
(AccessibleBase::accSelect):
- Stop sending E_INVALIDARG for elements that request TAKE_SELECTION that
  aren't beneath listboxes or menupopups.  This was too restrictive since
  any element can be selectable.
- Correct the misinterpretation of MSDN's stipulation of situations involving
  adding, removing, and extending selection on single-select elements



Canonical link: https://commits.webkit.org/45708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54376 268f45cc-cd09-0410-ab3c-d52691b4dbfc